// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/settings/index.vue FAB (speed dial) should be rendered when setting auth is system admin 1`] = `
<a
  bottom=""
  class="z-fab-stub"
  data-fab=""
  fixed=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
  nuxt=""
  right=""
  to="/settings/edit"
/>
`;

exports[`pages/settings/index.vue FAB (speed dial) should be rendered when the setting has permission 1`] = `
<a
  bottom=""
  class="z-fab-stub"
  data-fab=""
  fixed=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
  nuxt=""
  right=""
  to="/settings/edit"
/>
`;

exports[`pages/settings/index.vue No register bankingClientCode alert should be rendered when the setting has permission 1`] = `
<div
  class="v-alert v-sheet theme--dark warning"
  data-no-banking-client-code-alert=""
  role="alert"
>
  <div
    class="v-alert__wrapper"
  >
    <i
      aria-hidden="true"
      class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"
    />
    <div
      class="v-alert__content"
    >
      <span>
        委託者番号が登録されていません。
      </span>
      <span>
        <a>
          こちらから登録してください
        </a>
        。
      </span>
    </div>
  </div>
</div>
`;

exports[`pages/settings/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <!---->
  <div
    class="z-data-card-stub"
    title="事業者別設定"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
      label="委託者番号"
      value="7235978240"
    />
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <a
    bottom=""
    class="z-fab-stub"
    data-fab=""
    fixed=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    right=""
    to="/settings/edit"
  />
</div>
`;
